Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	new file:   images/Designer.png
	modified:   index.html
	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <section id="Nav-Bar">
         <nav class="navbar fixed-top navbar-expand-md navbar-dark  ">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Carousel</a>
+              <a class="navbar-brand" href="#">
+                <img src="images/Designer.png" alt="" style="width: 80px; border-radius: 100%;">
+                Carousel</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
