--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar fixed-top navbar-expand-md navbar-dark  ">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="images/Designer.png" alt="" style="width: 80px; border-radius: 100%;">
+                <img src="./images/Designer.png" alt="" style="width: 80px; border-radius: 100%;">
                 Carousel</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
